add deploy file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sims-ppob-muhammad-rozinul-mahrus",
+  "homepage": "https://rozinulmahrus.github.io/SIMS-PPOB-M-Rozinul-Mahrus",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
