change homepage github page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sims-ppob-muhammad-rozinul-mahrus",
-  "homepage": "https://rozinulmahrus.github.io/SIMS-PPOB-M-Rozinul-Mahrus",
+  "homepage": "https://rozinulmahrus.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
